...

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toTopOf="@+id/includeControlLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.hanihashemi.sleepwellbaby.ui.main.MainActivity">

        <LinearLayout
...
