...
    <string name="upgrade_button_title">Premium version</string>

    <!--Main Screen-->
    <string name="main_track_hasani">حسنی</string>
    <string name="main_track_gonjeshk_lala">گنجشک لالا</string>
    <string name="main_track_chera">چرا ؟!</string>
    <string name="main_track_music_box">Music Box</string>
    <string name="main_track_danny_boy">Danny Boy</string>
    <string name="main_track_lullaby">Lullaby</string>
    <string name="main_track_go_to_sleep">Go to Sleep</string>
    <string name="main_track_pretty_horses">Pretty Horses</string>
    <string name="main_track_nature">Nature</string>
    <string name="main_track_mom">Mother</string>
...
